add files to serve for other hosts

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,3 +17,14 @@ server {
         root   /usr/share/nginx/html;
     }
 }
+
+server {
+    listen       80;
+    server_name  libreddit.rollingkittens.com;
+
+	access_log off;
+
+    location = /robots.txt {
+        root   /usr/share/nginx/html/other-hosts/noindex;
+    }
+}
